<resources>
    <string name="app_name">Organiza2</string>
    <string name ="companiaLogin"><u>Soy una nueva compañía</u></string>
    <string name="entrada">Entrada</string>
    <string name="salida">Salida</string>
    <string name="fichar">Fichar</string>
    <string name="selOfic">Selecciona una Oficina</string>
    <string name="hora">Actualmente son las:</string>
    <string name="agenda">Agenda</string>
    <string name="vacaciones">Vacaciones</string>
    <string name="organigrama">Organigrama</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="horaentrada">Hora de entrada:</string>
    <string name="gestionUsuario">Gestión de usuarios</string>
    <string name="miPresencia">Timesheet</string>
    <string name="comprobar">Comprobar</string>
    <string name="accion">Acción: </string>
    <string name="diasVacaciones">Días de vacaciones: </string>
    <string name="anadirUsuario">Añadir usuario</string>
    <string name="compania">Compañia: </string>
    <string name="eliminarUsuario">Eliminar usuario</string>
    <string name="horasalida">Hora de salida:</string>
    <string name="nota">Nota nueva para guardar:</string>
    <string name="diasvaca">  DIAS DISPONIBLES: </string>
    <string name="fechaSal">FECHA DE SALIDA: </string>
    <string name="fechaReg">FECHA DE REGRESO: </string>
    <string name="guardar">Guardar fechas</string>
    <string name="nombreUsuario">Nombre de usuario:</string>
    <string name="correo">Correo electrónico:</string>
    <string name="nombre">Nombre: </string>
    <string name="contrasena">Contraseña: </string>
    <string name="jefe">Jefe: </string>
    <string name="apellidos">Apellidos: </string>
    <string name="telefono">Teléfono: </string>
    <string name="administrador">Administrador: </string>
    <string name="PresenciaCheckDate">Escoger mes y año </string>
    <string name="ButtonMiPresenciaChangeDate">Ver presencia </string>
    <string name="Header1PresenciaTable">Día</string>
    <string name="Header2PresenciaTable">Hora de entrada </string>
    <string name="Header3PresenciaTable">Hora de salida</string>

    <!--  Strings para la gestion de nuevas compañias  -->
    <string name="newCompanyCompanyTitle">Información de la compañia: </string>
    <string name="newCompanyCompanyName">Nombre de la empresa: </string>
    <string name="newCompanyPhoneNumber">Número de teléfono: </string>
    <string name="newCompanySector">Sector: </string>

    <string name="newCompanyOfficeTitle">Oficina principal: </string>
    <string name="newCompanyOfficeName">Alias: </string>
    <string name="newCompanyOfficeAddressStreetr">Direccion: </string>
    <string name="newCompanyOfficeAddressApartment">Piso: </string>
    <string name="newCompanyOfficeAddressLocation">Localidad: </string>
    <string name="newCompanyOfficeAddressProvince">Provincia: </string>
    <string name="newCompanyOfficeAddressPostalCode">CodigoPostal: </string>
    <string name="newCompanyOfficeAddressCountry">País: </string>

    <string name="newCompanyAdminTitle">Usuario Administrador: </string>
    <string name="newCompanyAdminName">Nombre y Apellidos: </string>
    <string name="newCompanyAdminPhoneNumber">Número de teléfono: </string>
    <string name="newCompanyAdminEmail">Email: </string>
    <string name="newCompanyAdminUserName">Nombre de Usuario: </string>
    <string name="newCompanyAdminPassword">Contraseña: </string>
    <string name="newCompanyAdminVacances">Días de vacaciones: </string>


    <string name="CondicionesDeRegistroTitle">Al dar a siguiente aceptará las siguientes condiciones: </string>
    <string name="AvisoLegalTitle">AVISO LEGAL </string>
    <string name="AvisoLegalText">
        "Le informamos de que sus datos personales formarán parte de un fichero titularidad de Organiza2 con la finalidad de gestionar su registro, así como para remitirle información sobre nuestros productos y servicios, tanto por medios postales como electrónicos. \n
        Mediante el registro en la presente aplicación usted consiente que Organiza2 comunique sus datos a su director/es pertenecientes a su empresa, con el fin de poder realizar una mejor gestión de su negocio. \n
        Puede ejercer sus derechos de acceso, rectificación, cancelación y oposición, así como revocar el consentimiento prestado para el envío de comunicaciones comerciales electrónicas, enviando un correo electrónico a Organiza2@gmail.com o bien enviando una carta a Organiza2 ."
    </string>
    <string name="CondicionesDeUsoTitle">CONDICIONES DE USO</string>
    <string name="CondicionesDeUsoText">
    MEDIANTE LA DESCARGA, LA INSTALACIÓN Y/O EL USO DE LA APLICACIÓN EN SU TERMINAL MANIFIESTA EXPRESAMENTE QUE ESTÁ DE ACUERDO, CUMPLE Y ACEPTA NUESTRAS CONDICIONES DE USO Y POLÍTICA DE PRIVACIDAD.
    </string>

    <string name="hello_blank_fragment">hello_blank_fragment: </string>

</resources>