<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fichar"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="sans-serif-black"
        android:textSize="28sp"
        android:textColor="@android:color/holo_blue_dark"/>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">

    <Button
        android:id="@+id/buttonFichar"
        android:layout_width="115dp"
        android:layout_height="79dp"
        android:text="@string/entrada" />

</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:gravity="center">

    <Spinner
        android:id="@+id/selOficina"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/selOfic">
    </Spinner>
</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">


        <ImageView
            android:id="@+id/imageViewReloj"
            android:layout_width="250dp"
            android:layout_height="200dp"
            app:srcCompat="@android:drawable/ic_menu_recent_history">
        </ImageView>
    </LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">

    <TextView
        android:background="@drawable/back"
        android:text="@string/hora"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:fontFamily="sans-serif-black"
        android:textSize="22sp">

    </TextView>
</LinearLayout>
    <LinearLayout
        android:background="@drawable/back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@android:drawable/presence_invisible"></ImageView>

                <TextView
                    android:text="@string/horaentrada"
                    android:layout_marginLeft="20dp"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:fontFamily="sans-serif-black"
                    android:textSize="20sp">
                </TextView>

            <TextView
                android:text="Hora"
                android:layout_marginLeft="60dp"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:fontFamily="sans-serif-black"
                android:textSize="20sp">
            </TextView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="?attr/homeAsUpIndicator"></ImageView>

            <TextView
                android:text="@string/horasalida"
                android:layout_marginLeft="20dp"

                android:layout_width="160dp"
                android:layout_height="60dp"
                android:fontFamily="sans-serif-black"
                android:textSize="20sp">

            </TextView>
            <TextView
                android:layout_marginLeft="60dp"
                android:text="Hora"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:fontFamily="sans-serif-black"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>