<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".GestionUsuarios">

    <LinearLayout
        android:layout_marginTop="6pt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".GestionUsuarios">

        <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/nombreUsuario"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="8pt"></TextView>

        <EditText
            android:id="@+id/usuario"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"></EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="5pt"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".GestionUsuarios">
        <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:layout_gravity="center"
            android:textSize="8pt"
            android:textAlignment="center"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/correo"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5pt"
        tools:context=".GestionUsuarios">
        <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/nombre"
            android:textSize="8pt"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5pt"
        tools:context=".GestionUsuarios">
        <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/telefono"
            android:textSize="8pt"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/telefono"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5pt"
        tools:context=".GestionUsuarios">
        <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/jefe"
            android:textSize="8pt"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/jefe"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5pt"
        tools:context=".GestionUsuarios">
        <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/compania"
            android:textSize="8pt"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/compania"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:orientation="horizontal"
        tools:context=".GestionUsuarios">
        <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/contrasena"
            android:textSize="8pt"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="3pt"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:orientation="horizontal"
        tools:context=".GestionUsuarios">
        <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/administrador"
            android:textSize="8pt"
            android:textColor="@color/black">
        </TextView>

        <Spinner
            android:id="@+id/administrador"
            android:layout_width="230dp"
            android:layout_height="14pt"
            android:layout_gravity="center"
            android:layout_marginLeft="3pt">

        </Spinner>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10pt"
        android:text="@string/anadirUsuario"
        android:onClick="onClickAnadir"
        android:backgroundTint="#2196F3"></Button>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="5pt"
        android:layout_height="2dp"
        android:background="#505050"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="5pt"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".GestionUsuarios">
        <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:layout_gravity="center"
            android:textSize="8pt"
            android:textAlignment="center"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/correoEliminar"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"></EditText>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10pt"
        android:text="@string/eliminarUsuario"
        android:onClick="onClickEliminar"
        android:backgroundTint="#2196F3"></Button>

</LinearLayout>