<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".PresenciaActivity"
android:orientation="vertical"
android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_weight="3"
                android:text="@string/PresenciaCheckDate" />

            <NumberPicker
                android:id="@+id/picker_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp">

            </NumberPicker>

            <NumberPicker
                android:id="@+id/picker_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </NumberPicker>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonPresencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:text="@string/ButtonMiPresenciaChangeDate" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/layoutTabla"
            android:gravity="center">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="100dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >
                <!--       Cabecera         -->
                <TableRow android:background="#0079D6" android:padding="15dp">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"
                        android:text="@string/Header1PresenciaTable" />

                    <TextView android:text="@string/Header2PresenciaTable"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="15">
                    </TextView>

                    <TextView android:text="@string/Header3PresenciaTable"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="15">
                    </TextView>
                </TableRow>

                <ScrollView android:background="#99FFFF" android:padding="5dp" android:layout_height="120dp">
                    <TableLayout android:id="@+id/tablaPresencia"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    </TableLayout>
                </ScrollView>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>